--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -1,7 +1,7 @@
 <%- include('./partials/header') %>
     <div class="w-full h-screen flex items-start px-20 py-20 gap-10">
         <div class="w-[30%] rounded-md overflow-hidden">
-            <div class="w-full h-80 bg-yellow-500"></div>
+            <img class="h-[12rem]" src="data:image/jpeg;base64,<%= cart[0].image.toString('base64') %>" alt="">
             <div class="w-full flex justify-between px-5 py-4">
                 <h3 class="text-2xl">Clinge Bag</h3>
                 <div class="flex items-center gap-2">
@@ -12,7 +12,7 @@
             </div>
             <div class="flex items-center justify-between px-5 py-3">
                 <h4 class="text-lg">Net Total</h4>
-                <h2 class="text-lg">₹ 1200</h2>
+                <h2 class="text-lg">₹ <%=bill%></h2>
             </div>
         </div>
         <div class="w-[70%]">
@@ -20,11 +20,11 @@
             <div class="px-10 mt-5">
                 <div class="flex mt-2">
                     <h4 class="w-1/3">Total MRP</h4>
-                    <h4>₹ 1920</h4>
+                    <h4>₹ <%=cart[0].price%></h4>
                 </div>
                 <div class="flex mt-2">
                     <h4 class="w-1/3">Discount on MRP</h4>
-                    <h4>₹ 0</h4>
+                    <h4>₹ <%=cart[0].discount%></h4>
                 </div>
                 <div class="flex mt-2">
                     <h4 class="w-1/3">Platform Fee</h4>
@@ -38,7 +38,7 @@
             <div class="w-full h-[1px] bg-black mt-10"></div>
             <div class="flex mt-5">
                 <h3 class="w-1/3 text-xl">Total Amount</h3>
-                <h3 class="font-semibold text-xl text-green-600">₹ 1940</h3>
+                <h3 class="font-semibold text-xl text-green-600">₹ <%=bill%></h3>
             </div>
             <form action=""></form>
         </div>
